Took out personal API key

--- a/mec-3.4.1-api-mini-project/api_data_wrangling_mini_project.ipynb
+++ b/mec-3.4.1-api-mini-project/api_data_wrangling_mini_project.ipynb
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MVkpHCDaPc4JzCjU5UtC\n"
+      "{your API key}\n"
      ]
     }
    ],
